# super-team

./: .env.example  .gitignore  .mcp.json  100K_CAPABILITY_ASSESSMENT.md  100K_UNLOCK_FINAL_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_REPORT.md  ARCHITECT_VERIFICATION.md  ATTEMPT_12_PREFIX_REPORT.md  AUDIT_MAP.md  AUDIT_REPORT_M1_M5.md  BUILD1_PERFECT_REPORT.md  BUILD1_VERIFICATION_REPORT.md  CODEBASE_INTELLIGENCE_VERIFICATION.md  CONTRACT_ENGINE_VERIFICATION.md  DEEP_AUDIT.md  DISCOVERY_REPORT.md  E2E_VERIFICATION_100K.md  E2E_VERIFICATION_REPORT_V2.md  FINAL_SCORE.md  FINAL_SCORING_REPORT.md  FINAL_SWEEP_REPORT.md  GAP_AUDIT.md  GAP_REPORT.md  GRAPH_RAG_AUDIT_REPORT.md  GRAPH_RAG_VERIFICATION_COMPLETE.md  HARDENING_FINAL_REPORT.md  IMPL_ARCHITECTURE_REPORT.md  INFRASTRUCTURE_MAP.md  INTEGRATION_REPORT.md  INTERFACE_AUDIT.md  ISSUE_MAP.md  LAUNCH_VERIFICATION_LOG.md  LEDGERPRO_VERIFICATION.json  LEDGERPRO_VERIFICATION_REPORT.md  LIBRARY_AUDIT.md  PERSISTENT_INTELLIGENCE_REPORT.md  PHASE1_BUILD1_VERIFICATION_REPORT.md  PHASE3_BUILD3_VERIFICATION_REPORT.md  PHASE5_WIRING_VERIFICATION.md  (+16 more)
.agent-team/: CONTRACTS.json  E2E_COVERAGE_MATRIX.md  E2E_RESULTS.md  E2E_TEST_PLAN.md  MASTER_PLAN.md  MILESTONE_HANDOFF.md  PRD_RECONCILIATION.md  TECH_RESEARCH.md  UI_REQUIREMENTS.md  VERIFICATION.md
.run4/: SUPER_TEAM_AUDIT_REPORT.md
.super-orchestrator/: PIPELINE_STATE.json  domain_model.json  service_map.json
data/: architect.db  contracts.db  graph_rag.db-shm  graph_rag.db-wal  service.db  service.db-shm  service.db-wal  symbols.db  test_architect.db-shm  test_architect.db-wal  test_contracts.db-shm  test_contracts.db-wal  test_symbols.db-shm  test_symbols.db-wal
docker/: docker-compose.build1.yml  docker-compose.generated.yml  docker-compose.infra.yml  docker-compose.run4.yml  (+1 more)
docs/: deployment.md  (+3 more)
(+406 files in other folders)
