[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-team"
version = "1.0.0"
description = "Super Agent Team - Multi-service architecture analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-c-sharp==0.23.1",
    "tree-sitter-go==0.25.0",
    "chromadb==1.5.0",
    "networkx==3.6.1",
    "mcp>=1.25,<2",
    "schemathesis==4.10.1",
    "openapi-spec-validator>=0.7.0",
    "prance>=25.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "transitions>=0.9.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "testcontainers>=4.0.0",
]

[project.scripts]
super-orchestrator = "src.super_orchestrator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:transitions",
    "ignore::DeprecationWarning:asyncio",
]
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "e2e: marks tests as end-to-end tests (require Docker)",
    "benchmark: marks tests as performance benchmarks",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
